# France-Travail-Job-Offers

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/: ROME Arborescence Secteurs Naf sept 2025.xlsx
france_travail/: __init__.py  auth.py  client.py  exceptions.py  models.py  referentiels.py  search_params.py
france_travail/data/: secteurs_naf_rome.json
scripts/: generate_referentiel.py
tests/: conftest.py  test_auth.py  test_client_get_offre.py  test_client_search.py  test_referentiels.py  test_search_params.py
