[project]
name = "france-travail-job-offers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "openpyxl>=3.1.5",
]

[tool.setuptools.package-data]
france_travail = ["data/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-httpx>=0.36.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
