[project]
name = "france-travail-job-offers"
version = "0.1.0"
description = "SDK Python pour l'API Offres d'emploi France Travail — recherche d'offres, consultation par identifiant, référentiel NAF/ROME embarqué."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Lucien Laumont", email = "laumontlucien@gmail.com" }
]
keywords = ["france-travail", "pole-emploi", "emploi", "offres", "api", "sdk", "rome", "naf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "openpyxl>=3.1.5",
]

[project.urls]
Repository = "https://github.com/LucienLaumont/france-travail-job-offers"

[tool.setuptools.package-data]
france_travail = ["data/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-httpx>=0.36.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
